# LensIt

./: .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  demo_QE.ipynb  demo_basics.ipynb  demo_curvlens.ipynb  demo_lensit.ipynb  demo_lensit_wcurl.ipynb  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  covs.rst  deflect.rst  ellmat.rst  index.rst  iterators.rst  lensit.rst
inputs/cls/: fiducial_flatsky_params.ini
lensit/: __init__.py
lensit/bicubic/: bicubic.f90
lensit/clusterlens/: constants.py  lensingmap.py  profile.py
lensit/curvedskylensing/: __init__.py  gauleg.py  lenscurv.py
lensit/data/cls/: fiducial_params_tensor.ini
lensit/ffs_covs/: __init__.py  ell_mat.py  ffs_cov.py  ffs_maskedcov.py  ffs_specmat.py  ffs_specmat_noBB.py  mfmcnoise.py
lensit/ffs_deflect/: __init__.py  ffs_deflect.py  ffs_pool.py
lensit/ffs_iterators/: Hcurv.py  __init__.py  bfgs.py  ffs_iterator.py  ffs_iterator_nufft.py  ffs_iterator_wcurl.py  ffs_iterator_wmask.py
lensit/ffs_qlms/: __init__.py  qlms.py
lensit/gpu/: __init__.py  apply_GPU.py  apply_cond3_GPU.py  bicubicspline.h  inverse_GPU.py  inversion.h  kernels_inversion.c  kernels_inversion_phi.c  kernels_lensing.c  lens_GPU.py
lensit/misc/: __init__.py  cls.py  ffs_clder.py  jc_camb.py  lens_utils.py  map_spliter.py  misc_utils.py  readcol.py  rfft2_utils.py
lensit/pbs/: __init__.py  pbs.py
lensit/pseudocls/: __init__.py  ffs_MSC.py
lensit/qcinv/: __init__.py  cd_monitors.py  cd_solve.py  chain_samples.py  dense.py  ffs_ninv_filt.py  ffs_ninv_filt_TEBdense.py  ffs_ninv_filt_ideal.py  ffs_ninv_filt_ideal_nufft.py  multigrid.py  opfilt_cinv.py  opfilt_cinv_TEBdense.py  opfilt_cinv_noBB.py  template_removal.py  utils.py
lensit/shts/: __init__.py  setup.py  shts.f90  shts.f95  util.py
lensit/sims/: __init__.py  cmbs.py  ffs_cmbs.py  ffs_maps.py  ffs_phas.py  maps.py  phas.py  sims_generic.py
notebooks/: demo_cluster_lensing.ipynb  demo_kappa0.ipynb  demo_lensit_nufft.ipynb  get_kappa_cluster.ipynb  get_mass_estimate.ipynb  get_snr_kappa_cluster.ipynb  test_cluster_fft.ipynb
notebooks/clusters/: demo_qe_cluster.ipynb
tests/: test_misc.py
